test/extern/kbrady/extern_string.chpl
extern proc printf(str: string);
printf("test string\n");
